test/expected/regression-http-parser.txt
/scripts/regression-http-parser.js:26
      throw new Error('trace');
      ^

Error: trace
    at Socket.res.socket._read (/scripts/regression-http-parser.js:26:13)
    at Socket.Readable.read (_stream_readable.js:429:10)
    at addChunk (_stream_readable.js:251:12)
    at readableAddChunk (_stream_readable.js:237:11)
    at Socket.Readable.push (_stream_readable.js:195:10)
    at TCP.onread (net.js:586:20)
    at Socket.connect (net.js:969:40)
    at Agent.connect [as createConnection] (net.js:107:35)
    at Agent.createSocket (_http_agent.js:221:26)
    at Agent.addRequest (_http_agent.js:183:10)
    at new ClientRequest (_http_client.js:271:16)
    at request (http.js:39:10)
    at Object.get (http.js:43:13)
    at Server.<anonymous> (/scripts/regression-http-parser.js:17:8)
    at Object.onceWrapper (events.js:312:19)
    at emitNone (events.js:105:13)
    at Server.emit (events.js:207:7)
    at emitListeningNT (net.js:1332:10)
    at _combinedTickCallback (internal/process/next_tick.js:99:11)
    at process._tickCallback (internal/process/next_tick.js:161:9)
    at setupInit (internal/process/next_tick.js:225:7)
    at internalNextTick (internal/process/next_tick.js:269:5)
    at Server.setupListenHandle [as _listen2] (net.js:1319:3)
    at listenInCluster (net.js:1353:12)
    at doListen (net.js:1479:7)
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:84:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:100:10)
    at createServerHandle (net.js:1229:14)
    at Server.setupListenHandle [as _listen2] (net.js:1285:14)
    at listenInCluster (net.js:1353:12)
    at doListen (net.js:1479:7)
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:84:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:100:10)
    at Object.lookup (dns.js:183:19)
    at lookupAndListen (net.js:1474:7)
    at Server.listen (net.js:1449:7)
    at Object.<anonymous> (/scripts/regression-http-parser.js:15:8)
    at Module._compile (module.js:569:30)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Function.Module.runMain (module.js:605:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
